<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Escolhas">

    <Button
        android:id="@+id/btnCadastrarCliente"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="163dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/app_add"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnListarClientes"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/app_list"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarCliente" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/app_exit"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarClientes" />
</androidx.constraintlayout.widget.ConstraintLayout>